Fixed findbugs issues
svn path=/trunk/; revision=46630


Former-commit-id: 75a201765fc83102309f9a2a07154e396d2e595d